YH-525: fix layout jump to mainLayout, EditProfileForm, CreateQuizPage, QuestionsPage, fix skeleton jump into the header

--- a/src/pages/profile/ProfilePage/ui/ProfilePage.module.css
+++ b/src/pages/profile/ProfilePage/ui/ProfilePage.module.css
@@ -46,6 +46,11 @@
   padding: 24px;
 }
 
+.profile-card-skeleton, 
+.card-skeleton:not(:last-child) {
+  margin-bottom: 24px;
+}
+
 .header-card-skeleton {
   margin-bottom: 20px;
 }
